# AD_with_optimizers

./: .coverage  LICENSE  README.md  d_a6cd2867d4607e9d___init___py.html  d_a6cd2867d4607e9d_dual_number_py.html  d_a6cd2867d4607e9d_forward_mode_py.html  d_a6cd2867d4607e9d_optimizers_py.html  index.html  pyproject.toml  requirement.txt  status.json
.github/workflows/: coverage.yml  test.yml
docs/: documentation.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_progress.md  plot.ipynb
src/AD_fbi/: __init__.py  dual_number.py  forward_mode.py  optimizers.py
src/tests/: test_dual_number.py  test_forward_mode.py  test_optimizers.py
